bin_PROGRAMS =
include apps/bindtst/Makefile.am
include apps/contst/Makefile.am
include apps/eventtst/Makefile.am
include apps/ethtst/Makefile.am
include apps/helloworld/Makefile.am
include apps/helloworldcpp/Makefile.am
include apps/msgtst/Makefile.am
include apps/primalloctst/Makefile.am
#include apps/ssactst/Makefile.am

if LRT_BARE
if powerpc
include apps/treetst/Makefile.am
endif
endif
