include misc/test/Makefile.am

misc_ctrprim_sources = misc/Ctr.h misc/CtrPrim.c misc/CtrPrim.h \
	misc/CtrPrimDistributed.c misc/CtrPrimDistributed.h

misc_ctrcplus_sources = misc/CtrCPlus.C misc/CtrCPlus.H

misc_sources = $(misc_ctrprim_sources) $(misc_ctrcplus_sources)

misc_cppunit_sources = $(misc_test_cppunit_sources)