
bin_PROGRAMS += apps/helloworld_parallel/helloworld_parallel

apps_helloworld_parallel_helloworld_parallel_SOURCES = \
	apps/helloworld_parallel/helloworld_parallel.c

apps_helloworld_parallel_helloworld_parallel_LDADD = $(ebbos_libs) $(LDADD)
apps_helloworld_parallel_helloworld_parallel_DEPENDENCIES = $(ebbos_libs)
