bin_PROGRAMS += apps/helloworldcpp/helloworldcpp
apps_helloworldcpp_helloworldcpp_SOURCES = apps/helloworldcpp/helloworld.cpp

apps_helloworldcpp_helloworldcpp_CPPFLAGS = $(AM_CPPFLAGS)
apps_helloworldcpp_helloworldcpp_LDADD = $(ebbos_libs)
apps_helloworldcpp_helloworldcpp_DEPENDENCIES = $(ebbos_libs)
