if LRT_BARE
noinst_LIBRARIES += libacpica.a
ebbos_libs += libacpica.a
libacpica_a_CFLAGS = $(BAREFLAGS)
libacpica_a_CPPFLAGS = -I $(top_srcdir)/arch/amd64/acpica/include
libacpica_a_SOURCES = \
	arch/amd64/acpica/osebbosxf.c \
	arch/amd64/acpica/components/disassembler/dmobject.c \
	arch/amd64/acpica/components/disassembler/dmnames.c \
	arch/amd64/acpica/components/disassembler/dmresrc.c \
	arch/amd64/acpica/components/disassembler/dmresrcs.c \
	arch/amd64/acpica/components/disassembler/dmbuffer.c \
	arch/amd64/acpica/components/disassembler/dmresrcl.c \
	arch/amd64/acpica/components/disassembler/dmresrcl2.c \
	arch/amd64/acpica/components/disassembler/dmutils.c \
	arch/amd64/acpica/components/disassembler/dmwalk.c \
	arch/amd64/acpica/components/events/evsci.c \
	arch/amd64/acpica/components/events/evgpeinit.c \
	arch/amd64/acpica/components/events/evgpeblk.c \
	arch/amd64/acpica/components/events/evrgnini.c \
	arch/amd64/acpica/components/events/evgpe.c \
	arch/amd64/acpica/components/events/evevent.c \
	arch/amd64/acpica/components/events/evxfregn.c \
	arch/amd64/acpica/components/events/evmisc.c \
	arch/amd64/acpica/components/events/evxfgpe.c \
	arch/amd64/acpica/components/events/evxface.c \
	arch/amd64/acpica/components/events/evxfevnt.c \
	arch/amd64/acpica/components/events/evregion.c \
	arch/amd64/acpica/components/events/evgpeutil.c \
	arch/amd64/acpica/components/events/evglock.c \
	arch/amd64/acpica/components/resources/rsmisc.c \
	arch/amd64/acpica/components/resources/rsaddr.c \
	arch/amd64/acpica/components/resources/rsdump.c \
	arch/amd64/acpica/components/resources/rslist.c \
	arch/amd64/acpica/components/resources/rsirq.c \
	arch/amd64/acpica/components/resources/rsio.c \
	arch/amd64/acpica/components/resources/rsutils.c \
	arch/amd64/acpica/components/resources/rsxface.c \
	arch/amd64/acpica/components/resources/rscalc.c \
	arch/amd64/acpica/components/resources/rscreate.c \
	arch/amd64/acpica/components/resources/rsmemory.c \
	arch/amd64/acpica/components/resources/rsinfo.c \
	arch/amd64/acpica/components/resources/rsserial.c \
	arch/amd64/acpica/components/tables/tbinstal.c \
	arch/amd64/acpica/components/tables/tbutils.c \
	arch/amd64/acpica/components/tables/tbfind.c \
	arch/amd64/acpica/components/tables/tbxface.c \
	arch/amd64/acpica/components/tables/tbfadt.c \
	arch/amd64/acpica/components/tables/tbxfroot.c \
	arch/amd64/acpica/components/utilities/utalloc.c \
	arch/amd64/acpica/components/utilities/utresrc.c \
	arch/amd64/acpica/components/utilities/utmath.c \
	arch/amd64/acpica/components/utilities/utosi.c \
	arch/amd64/acpica/components/utilities/utcopy.c \
	arch/amd64/acpica/components/utilities/uteval.c \
	arch/amd64/acpica/components/utilities/utdebug.c \
	arch/amd64/acpica/components/utilities/utmisc.c \
	arch/amd64/acpica/components/utilities/utinit.c \
	arch/amd64/acpica/components/utilities/utxface.c \
	arch/amd64/acpica/components/utilities/utcache.c \
	arch/amd64/acpica/components/utilities/utobject.c \
	arch/amd64/acpica/components/utilities/utdecode.c \
	arch/amd64/acpica/components/utilities/utaddress.c \
	arch/amd64/acpica/components/utilities/utclib.c \
	arch/amd64/acpica/components/utilities/utdelete.c \
	arch/amd64/acpica/components/utilities/utstate.c \
	arch/amd64/acpica/components/utilities/utlock.c \
	arch/amd64/acpica/components/utilities/utmutex.c \
	arch/amd64/acpica/components/utilities/utids.c \
	arch/amd64/acpica/components/utilities/utglobal.c \
	arch/amd64/acpica/components/utilities/uttrack.c \
	arch/amd64/acpica/components/utilities/utxfmutex.c \
	arch/amd64/acpica/components/utilities/utxferror.c \
	arch/amd64/acpica/components/parser/pswalk.c \
	arch/amd64/acpica/components/parser/psparse.c \
	arch/amd64/acpica/components/parser/psargs.c \
	arch/amd64/acpica/components/parser/psutils.c \
	arch/amd64/acpica/components/parser/psxface.c \
	arch/amd64/acpica/components/parser/psscope.c \
	arch/amd64/acpica/components/parser/pstree.c \
	arch/amd64/acpica/components/parser/psloop.c \
	arch/amd64/acpica/components/parser/psopcode.c \
	arch/amd64/acpica/components/hardware/hwregs.c \
	arch/amd64/acpica/components/hardware/hwpci.c \
	arch/amd64/acpica/components/hardware/hwacpi.c \
	arch/amd64/acpica/components/hardware/hwxfsleep.c \
	arch/amd64/acpica/components/hardware/hwtimer.c \
	arch/amd64/acpica/components/hardware/hwgpe.c \
	arch/amd64/acpica/components/hardware/hwxface.c \
	arch/amd64/acpica/components/hardware/hwvalid.c \
	arch/amd64/acpica/components/hardware/hwsleep.c \
	arch/amd64/acpica/components/hardware/hwesleep.c \
	arch/amd64/acpica/components/debugger/dbcmds.c \
	arch/amd64/acpica/components/debugger/dbutils.c \
	arch/amd64/acpica/components/debugger/dbhistry.c \
	arch/amd64/acpica/components/debugger/dbdisply.c \
	arch/amd64/acpica/components/debugger/dbnames.c \
	arch/amd64/acpica/components/debugger/dbinput.c \
	arch/amd64/acpica/components/debugger/dbexec.c \
	arch/amd64/acpica/components/debugger/dbmethod.c \
	arch/amd64/acpica/components/debugger/dbfileio.c \
	arch/amd64/acpica/components/debugger/dbstats.c \
	arch/amd64/acpica/components/debugger/dbxface.c \
	arch/amd64/acpica/components/namespace/nsrepair2.c \
	arch/amd64/acpica/components/namespace/nswalk.c \
	arch/amd64/acpica/components/namespace/nsrepair.c \
	arch/amd64/acpica/components/namespace/nsdump.c \
	arch/amd64/acpica/components/namespace/nsobject.c \
	arch/amd64/acpica/components/namespace/nssearch.c \
	arch/amd64/acpica/components/namespace/nsnames.c \
	arch/amd64/acpica/components/namespace/nsxfobj.c \
	arch/amd64/acpica/components/namespace/nspredef.c \
	arch/amd64/acpica/components/namespace/nseval.c \
	arch/amd64/acpica/components/namespace/nsdumpdv.c \
	arch/amd64/acpica/components/namespace/nsxfeval.c \
	arch/amd64/acpica/components/namespace/nsxfname.c \
	arch/amd64/acpica/components/namespace/nsalloc.c \
	arch/amd64/acpica/components/namespace/nsutils.c \
	arch/amd64/acpica/components/namespace/nsload.c \
	arch/amd64/acpica/components/namespace/nsaccess.c \
	arch/amd64/acpica/components/namespace/nsparse.c \
	arch/amd64/acpica/components/namespace/nsinit.c \
	arch/amd64/acpica/components/dispatcher/dswexec.c \
	arch/amd64/acpica/components/dispatcher/dswstate.c \
	arch/amd64/acpica/components/dispatcher/dswscope.c \
	arch/amd64/acpica/components/dispatcher/dsfield.c \
	arch/amd64/acpica/components/dispatcher/dsutils.c \
	arch/amd64/acpica/components/dispatcher/dsargs.c \
	arch/amd64/acpica/components/dispatcher/dsopcode.c \
	arch/amd64/acpica/components/dispatcher/dsmthdat.c \
	arch/amd64/acpica/components/dispatcher/dsmethod.c \
	arch/amd64/acpica/components/dispatcher/dswload.c \
	arch/amd64/acpica/components/dispatcher/dsobject.c \
	arch/amd64/acpica/components/dispatcher/dscontrol.c \
	arch/amd64/acpica/components/dispatcher/dswload2.c \
	arch/amd64/acpica/components/dispatcher/dsinit.c \
	arch/amd64/acpica/components/executer/exfield.c \
	arch/amd64/acpica/components/executer/exprep.c \
	arch/amd64/acpica/components/executer/excreate.c \
	arch/amd64/acpica/components/executer/exmisc.c \
	arch/amd64/acpica/components/executer/exstore.c \
	arch/amd64/acpica/components/executer/exfldio.c \
	arch/amd64/acpica/components/executer/exmutex.c \
	arch/amd64/acpica/components/executer/exoparg1.c \
	arch/amd64/acpica/components/executer/exresop.c \
	arch/amd64/acpica/components/executer/exdump.c \
	arch/amd64/acpica/components/executer/exutils.c \
	arch/amd64/acpica/components/executer/exoparg3.c \
	arch/amd64/acpica/components/executer/exresolv.c \
	arch/amd64/acpica/components/executer/exsystem.c \
	arch/amd64/acpica/components/executer/exstorob.c \
	arch/amd64/acpica/components/executer/exresnte.c \
	arch/amd64/acpica/components/executer/exoparg2.c \
	arch/amd64/acpica/components/executer/exstoren.c \
	arch/amd64/acpica/components/executer/exdebug.c \
	arch/amd64/acpica/components/executer/exconfig.c \
	arch/amd64/acpica/components/executer/exregion.c \
	arch/amd64/acpica/components/executer/exnames.c \
	arch/amd64/acpica/components/executer/exconvrt.c \
	arch/amd64/acpica/components/executer/exoparg6.c \
	arch/amd64/acpica/include/acpiosxf.h \
	arch/amd64/acpica/include/achware.h \
	arch/amd64/acpica/include/acstruct.h \
	arch/amd64/acpica/include/acdisasm.h \
	arch/amd64/acpica/include/acexcep.h \
	arch/amd64/acpica/include/acparser.h \
	arch/amd64/acpica/include/acinterp.h \
	arch/amd64/acpica/include/acutils.h \
	arch/amd64/acpica/include/actypes.h \
	arch/amd64/acpica/include/actbl2.h \
	arch/amd64/acpica/include/acobject.h \
	arch/amd64/acpica/include/acdispat.h \
	arch/amd64/acpica/include/acmacros.h \
	arch/amd64/acpica/include/acrestyp.h \
	arch/amd64/acpica/include/amlresrc.h \
	arch/amd64/acpica/include/acconfig.h \
	arch/amd64/acpica/include/acnames.h \
	arch/amd64/acpica/include/accommon.h \
	arch/amd64/acpica/include/acpredef.h \
	arch/amd64/acpica/include/platform/acintel.h \
	arch/amd64/acpica/include/platform/acfreebsd.h \
	arch/amd64/acpica/include/platform/acwin.h \
	arch/amd64/acpica/include/platform/accygwin.h \
	arch/amd64/acpica/include/platform/acgcc.h \
	arch/amd64/acpica/include/platform/acebbos.h \
	arch/amd64/acpica/include/platform/acmsvc.h \
	arch/amd64/acpica/include/platform/acefi.h \
	arch/amd64/acpica/include/platform/acwin64.h \
	arch/amd64/acpica/include/platform/acnetbsd.h \
	arch/amd64/acpica/include/platform/acenv.h \
	arch/amd64/acpica/include/platform/acos2.h \
	arch/amd64/acpica/include/platform/aclinux.h \
	arch/amd64/acpica/include/acresrc.h \
	arch/amd64/acpica/include/actbl.h \
	arch/amd64/acpica/include/acevents.h \
	arch/amd64/acpica/include/amlcode.h \
	arch/amd64/acpica/include/acapps.h \
	arch/amd64/acpica/include/actbl1.h \
	arch/amd64/acpica/include/actables.h \
	arch/amd64/acpica/include/acpi.h \
	arch/amd64/acpica/include/acnamesp.h \
	arch/amd64/acpica/include/acdebug.h \
	arch/amd64/acpica/include/aclocal.h \
	arch/amd64/acpica/include/acoutput.h \
	arch/amd64/acpica/include/acglobal.h \
	arch/amd64/acpica/include/actbl3.h \
	arch/amd64/acpica/include/acpixf.h \
	arch/amd64/acpica/include/acopcode.h
endif