include l0/lrt/arch/amd64/Makefile.am
include l0/lrt/arch/ppc32/Makefile.am
include l0/lrt/arch/ppc64/Makefile.am

if x86_64
l0_lrt_arch_sources = $(l0_lrt_arch_amd64_sources)
endif

if powerpc
l0_lrt_arch_sources = $(l0_lrt_arch_powerpc_sources)
endif

if powerpc64
l0_lrt_arch_sources = $(l0_lrt_arch_powerpc64_sources)
endif
