include l0/lrt/bare/arch/Makefile.am

l0_lrt_bare_sources = \
	$(l0_lrt_bare_arch_sources) \
	l0/lrt/bare/exit.c \
	l0/lrt/bare/event.h \
	l0/lrt/bare/event_loc.h \
	l0/lrt/bare/event_num.h \
	l0/lrt/bare/event_irq_def.h \
	l0/lrt/bare/mem.h \
	l0/lrt/bare/pic.h \
	l0/lrt/bare/stdio.c \
	l0/lrt/bare/stdio.h \
	l0/lrt/bare/string.c \
	l0/lrt/bare/string.h \
	l0/lrt/bare/trans.h
