l0_lrt_ulnx_sources = \
	l0/lrt/ulnx/const.h \
	l0/lrt/ulnx/types.h \
	l0/lrt/ulnx/mem_ulnx.c l0/lrt/ulnx/mem.h \
	l0/lrt/ulnx/trans.c l0/lrt/ulnx/trans.h \
	l0/lrt/ulnx/event.c l0/lrt/ulnx/event.h \
	l0/lrt/ulnx/event_irq_def.h \
	l0/lrt/ulnx/event_loc.h \
	l0/lrt/ulnx/event_num.h \
	l0/lrt/ulnx/lrt_start.c \
	l0/lrt/ulnx/lrt_start.h \
	l0/lrt/ulnx/EventMgrPrimImp.c \
	l0/lrt/ulnx/EventMgrPrimExpImp.c \
	l0/lrt/ulnx/exit.c
