l0_lrt_bare_arch_ppc32_sources = \
	l0/lrt/bare/arch/ppc32/bic.c \
	l0/lrt/bare/arch/ppc32/bic.h \
	l0/lrt/bare/arch/ppc32/EventMgrPrimImp.c \
	l0/lrt/bare/arch/ppc32/init.c \
	l0/lrt/bare/arch/ppc32/isr.S \
	l0/lrt/bare/arch/ppc32/ivpr_common.c \
	l0/lrt/bare/arch/ppc32/lrt_start.c \
	l0/lrt/bare/arch/ppc32/lrt_start.h \
	l0/lrt/bare/arch/ppc32/lrt_start_isr.S \
	l0/lrt/bare/arch/ppc32/mailbox.c \
	l0/lrt/bare/arch/ppc32/mailbox.h \
	l0/lrt/bare/arch/ppc32/mem.c \
	l0/lrt/bare/arch/ppc32/mem.h \
	l0/lrt/bare/arch/ppc32/pic.c \
	l0/lrt/bare/arch/ppc32/pic.h \
	l0/lrt/bare/arch/ppc32/start.S \
	l0/lrt/bare/arch/ppc32/trans.c \
	l0/lrt/bare/arch/ppc32/trans.h

if LRT_BARE
if powerpc

libebb_a_DEPENDENCIES += $(top_srcdir)/l0/lrt/bare/arch/ppc32/link.ld

endif
endif

EXTRA_DIST += l0/lrt/bare/arch/ppc32/link.ld